# test-claw-rust

./: Cargo.toml  LICENSE  README.md
src/: error.rs  main.rs
src/agent/: conversation.rs  mod.rs
src/tools/: bash.json  bash.rs  glob.json  glob.rs  mod.rs  read.json  read.rs  write.json  write.rs
src/ui/: consent.rs  mod.rs  spinner.rs
