[package]
name = "test-claw-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }  # async runtime
async-openai = { version = "=0.32.4", features = ["byot", "chat-completion"] }
clap = { version = "4.3.14", features = ["derive"] }                 # CLI argument parsing
serde_json = "1.0.149"                                                # JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
console = "0.16.3"
dotenvy = "0.15.7"
pretty_env_logger = "0.5.0"
log = "0.4.29"
glob = "0.3"
async-trait = "0.1"